--- a/humanresource/templates/HR/HR_create.html
+++ b/humanresource/templates/HR/HR_create.html
@@ -23,7 +23,7 @@
             <div class="aside_contents">
                 <a href="{% url 'HR:management' %}">인사관리</a>
             </div>
-            <div class="aside_contents">
+            <div class="aside_contents aside_contents_thispage">
                 <a href="{% url 'HR:HR_create' %}">인사등록</a>
             </div>
         </div>
