--- a/vehicle/templates/vehicle/vehicle_create.html
+++ b/vehicle/templates/vehicle/vehicle_create.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form method="POST" action="{% url 'vehicle:vehicle_create' %}">
+    <form method="POST" action="" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ vehicle_form }}
-        {{ insurance_form }}
-    <input type="submit" value="등록">
+        {{ vehicle_form.as_p }}
+        {{ insurance_form.as_p }}
+        
+        <p>첨부파일</p>
+        <input type="file" name="file">
+        <input type="file" name="file">
+        <input type="file" name="file">
+        <br>
+        <input type="submit" value="등록">
+    </form>
 
 {% endblock %}
