--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         </div>
         <div class="main_title"><a href="/" class="main_title_link">킹버스 ERP</a></div>
         <div class="basic_header_profile_form">
-          <span class="profile_form_word"><a class="profile_detail_link" href="profile">{{ request.session.name }}</a>님 반갑습니다!</span><a href="/member/logout">logout</a>
+          <span class="profile_form_word"><a class="profile_detail_link" href="/member/profile">{{ request.session.name }}</a>님 반갑습니다!</span><a href="/member/logout">logout</a>
         </div>
       </div>
       <div class="nav_form">
@@ -107,7 +107,7 @@
     {% block content %}
     {% endblock %}
 
-    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
     {% block script %}
     {% endblock %}
