210719 브랜치병합

--- a/crudmember/templates/crudmember/login.html
+++ b/crudmember/templates/crudmember/login.html
@@ -26,7 +26,7 @@
                 </div>
             </form>
             <ul>
-                <li><a href="#">ID/PW찾기</a></li>
+                <li><a href="{% url 'crudmember:passwordfinder' %}">ID/PW찾기</a></li>
                 <li><a href="{% url 'crudmember:signup_terms' %}">회원가입</a></li>
             </ul>
         </fieldset>
