--- a/crudmember/templates/crudmember/passwordfinder.html
+++ b/crudmember/templates/crudmember/passwordfinder.html
@@ -10,6 +10,13 @@
     <div>전번<input type="text" name="tel"></div>
     <input type="submit" value="ㄱ" name="findpw">
 </form>
+비번찾기(email)
+<form action="." method="POST">
+    {% csrf_token %}
+    <div>아이디<input type="text" name="userid"></div>
+    <div>이메일<input type="text" name="useremail"></div>
+    <input type="submit" value="보내기" name="sendemail">
+</form>
 {{error}}
 
 
