--- a/static/css/base.css
+++ b/static/css/base.css
@@ -426,3 +426,46 @@ html::-webkit-scrollbar-track {
   color: white;
   cursor: pointer;
 }
+
+
+/*modules*/
+.inputModules{
+  height: 2.5rem;
+  padding-left: 1rem;
+  background-color: white;
+  border: 0.1rem solid #D2D2D2;
+  border-radius: 0.2rem;
+  box-sizing: border-box;
+  font-size: 1.4rem;
+  color: #191919;
+  outline: none;
+}
+.btnModules{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 6.5rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 0.3rem;
+  font-size: 1.4rem;
+  color: white;
+  cursor: pointer;
+}
+.popupAreaModules{
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+.popupBgModules{
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.16);
+}
