--- a/static/css/notice/notice_edit.css
+++ b/static/css/notice/notice_edit.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 20rem;
+  height: auto;
 }
 
 .inputCell {
@@ -19,11 +19,12 @@
   align-items: center;
   width: 100%;
   height: 2.5rem;
+  margin-bottom: 2rem;
 }
 
 .inputCellFile {
   align-items: flex-start;
-  height: 13rem;
+  height: auto;
 }
 
 .inputName {
@@ -41,7 +42,7 @@
 }
 
 .inputCell input[type=text] {
-  width: calc(100% - 12rem);
+  width: calc(100% - 14.2rem);
   height: 2.3rem;
   padding-left: 1rem;
 }
@@ -51,7 +52,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: calc(100% - 13rem);
-  height: 13rem;
+  height: auto;
 }
 
 .inputCell input[type=file] {
@@ -63,21 +64,23 @@
 
 .createdFileBox {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   width: calc(100% - 2rem);
-  height: 4rem;
+  height: 8rem;
   padding: 1rem;
   border: 0.1rem solid #D2D2D2;
   border-radius: 0.3rem;
+  overflow-y: scroll;
 }
 
-.createdFileCell{
+.createdFileCell {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
+
 .createdFileCell span {
   font-size: 1.4rem;
   color: #191919;
@@ -97,7 +100,26 @@
 .radiobox {
   display: flex;
   align-items: center;
-  width: calc(100% - 11rem);
+  width: calc(100% - 13rem);
+}
+
+/* 스크롤바 설정*/
+.createdFileBox::-webkit-scrollbar {
+  position: absolute;
+  width: 1rem;
+}
+
+/* 스크롤바 막대 설정*/
+.createdFileBox::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #828282;
+  /* 스크롤바 둥글게 설정    */
+  border-radius: 10px;
+}
+
+/* 스크롤바 뒷 배경 설정*/
+.createdFileBox::-webkit-scrollbar-track {
+  background-color: #F5F5F5;
 }
 
 .radiobox input {
